// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListGrid should enhance the default rowRenderer with selection Higher Order renderer 1`] = `
<VirtualizedList(RowRender)
  rowRenderer={[Function]}
/>
`;

exports[`ListGrid should render react-virtualized table 1`] = `
<Table
  className="tc-list-table undefined"
  disableHeader={false}
  estimatedRowSize={30}
  gridClassName={undefined}
  headerHeight={35}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={600}
  id="my-list"
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowClassName=""
  rowCount={2}
  rowGetter={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  sort={undefined}
  sortBy={undefined}
  sortDirection={undefined}
  style={Object {}}
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-id"
    columnData={
      Object {
        "id": "my-list",
      }
    }
    dataKey="id"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-id"
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-name"
    columnData={
      Object {
        "id": "my-list",
      }
    }
    dataKey="name"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-name"
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-description"
    columnData={
      Object {
        "id": "my-list",
      }
    }
    dataKey="description"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-description"
    headerRenderer={[Function]}
    label=""
    style={Object {}}
  />
</Table>
`;

exports[`ListGrid should render table with sort props 1`] = `
<Table
  className="tc-list-table undefined"
  disableHeader={false}
  estimatedRowSize={30}
  gridClassName={undefined}
  headerHeight={35}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={600}
  id="my-list"
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowClassName=""
  rowCount={2}
  rowGetter={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  sort={[Function]}
  sortBy="name"
  sortDirection="DESC"
  style={Object {}}
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-id"
    columnData={
      Object {
        "id": "my-list",
      }
    }
    dataKey="id"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-id"
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-name"
    columnData={
      Object {
        "id": "my-list",
      }
    }
    dataKey="name"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-name"
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-description"
    columnData={
      Object {
        "id": "my-list",
      }
    }
    dataKey="description"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-description"
    headerRenderer={[Function]}
    label=""
    style={Object {}}
  />
</Table>
`;
